# jj

./: CHANGELOG.md  Cargo.toml
cli/: Cargo.toml
cli/src/: cli_util.rs  commit_templater.rs  config.rs  description_util.rs  diff_util.rs  operation_templater.rs  template_builder.rs
cli/src/commands/: git.rs  rebase.rs  split.rs
cli/src/merge_tools/: diff_working_copies.rs  external.rs
cli/tests/: test_abandon_command.rs  test_absorb_command.rs  test_bookmark_command.rs  test_commit_command.rs  test_commit_template.rs  test_git_fetch.rs
lib/: Cargo.toml
lib/src/: absorb.rs  annotate.rs  async_trait.rs  backend.rs  commit.rs  commit_builder.rs  config.rs  config_resolver.rs  conflicts.rs  content_hash.rs  copies.rs  dag_walk.rs  default_submodule_store.rs  diff.rs  dsl_util.rs  evolution.rs  extensions_map.rs  file_util.rs  files.rs  fileset.rs  fileset_parser.rs  fix.rs  fsmonitor.rs  git.rs  git_backend.rs  git_subprocess.rs  gitignore.rs  gpg_signing.rs  graph.rs  hex_util.rs  id_prefix.rs  index.rs  lib.rs  local_working_copy.rs  matchers.rs  merge.rs  merged_tree.rs  object_id.rs  op_heads_store.rs  op_store.rs  (+29 more)
lib/src/config/: misc.toml
lib/src/default_index/: bit_set.rs  composite.rs  entry.rs  mod.rs  mutable.rs  readonly.rs  rev_walk.rs  revset_engine.rs  revset_graph_iterator.rs  store.rs
lib/src/lock/: fallback.rs  mod.rs  unix.rs
lib/src/protos/: op_store.rs  simple_store.proto  simple_store.rs
lib/tests/: test_commit_builder.rs  test_fix.rs  test_git.rs  test_git_backend.rs  test_id_prefix.rs  test_index.rs  test_mut_repo.rs  test_operations.rs  test_refs.rs  test_revset.rs  test_revset_optimized.rs  test_rewrite.rs  test_rewrite_duplicate.rs  test_rewrite_transform.rs  test_view.rs
lib/testutils/: Cargo.toml
lib/testutils/src/: lib.rs  test_backend.rs
